# neuralmem

./: .dockerignore  .gitignore  <MagicMock name='mock.get_db_path()' id='4482722960'>  <MagicMock name='mock.get_db_path()' id='4533650496'>  <MagicMock name='mock.get_db_path()' id='5222337568'>  Agent_Memory_深度调研与完整方案.md  CHANGELOG.md  CHANGELOG_V09.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  NeuralMem_落地执行方案.md  README.md  README_en.md  README_ja.md  README_ko.md  README_vi.md  README_zh-TW.md  README_zh.md  RELEASE_NOTES_v0.1.0.md  benchmark_advanced.py  benchmark_report.json  competitive-analysis-and-roadmap.md  debug_auto.py  debug_gdrive.py  docker-compose.yml  lore-context-eval-report.md  mem0-competitive-analysis.md  mkdocs.yml  pyproject.toml  stress_report.json  stress_test.py  test_dist.py  test_import_smoke.py
.omc/: project-memory.json
.omc/plans/: neuralmem-week1-8.md
.omc/sessions/: c0249f35-24b9-404d-99bf-0eb0901e40fd.json
.omc/specs/: deep-interview-neuralmem.md
.omc/state/: mission-state.json
benchmarks/: README.md  __init__.py  competitive_benchmark.py  locomo_benchmark.py  locomo_sample.json  mem0_comparison.py  run_benchmark.py
benchmarks/longmemeval/: adapter.py  run_benchmark.py
benchmarks/results/: benchmark_results.json  mem0_comparison.json
dashboard/backend/: main.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: NEURALMEM-VS-SUPERMEMORY-FINAL.md  api-reference.md  best-practices.md  competitive-analysis.md  enterprise.md  index.md  mcp-integrations.md  optimization-roadmap.md  quickstart.md  roadmap-v19-v24.md  supermemory-competitive-analysis.md  supermemory-deep-dive.md  supermemory-evaluation-v13.md  supermemory-evaluation-v16.md  supermemory-evaluation-v18.md  supermemory-evaluation-v19.md  supermemory-evaluation-v20.md  supermemory-evaluation-v21.md  supermemory-evaluation-v22.md  supermemory-evaluation-v23.md  supermemory-evaluation-v24.md  usage-guide.md  v1.7-roadmap.md  v1.8-roadmap.md
docs/concepts/: architecture.md  memory-types.md  retrieval.md
docs/guides/: claude-code.md  cursor.md
docs/integrations/: autogen.md  crewai.md  index.md  langchain.md  llamaindex.md  semantic-kernel.md
examples/: 01_quickstart.py  02_mcp_claude_code.md  03_metrics.py  03_multi_user.py
examples/agent/: multi_framework.py
examples/chatbot/: chatbot.py
examples/rag/: rag_demo.py
extensions/: README.md
extensions/chrome/: background.js  content_script.js  manifest.json  popup.js
extensions/firefox/: background.js  content_script.js  manifest.json  popup.html  popup.js
extensions/raycast/: README.md  package.json
integrations/langchain/: pyproject.toml
integrations/langchain/neuralmem_langchain/: __init__.py  retriever.py
integrations/langchain/tests/: conftest.py  test_retriever.py  test_retriever_async.py
integrations/llamaindex/: pyproject.toml
integrations/llamaindex/neuralmem_llamaindex/: __init__.py  chat_memory.py  retriever.py
integrations/llamaindex/tests/: conftest.py  test_chat_memory.py  test_retriever.py
npm/: README.md  package-lock.json  package.json
npm/src/: client.ts  index.test.ts  index.ts  types.ts
scripts/: build.sh
sdk/: publish.py  version_sync.py
sdk/typescript/: README.md  package-lock.json  package.json  publish.ts  tsconfig.json
src/neuralmem/: __init__.py
tests/: conftest.py
tests/contract/: test_all_embedders_protocol.py  test_embedder_protocol.py  test_extractor_protocol.py  test_storage_protocol.py
tests/integration/: test_memory_facade.py
tests/unit/: test_access_control.py  test_adaptive.py  test_adaptive_tuning.py  (+155 more)
(+289 files in other folders)
