[project]
name = "neuralmem"
version = "0.1.0"
description = "Memory as Infrastructure — Local-first, MCP-native agent memory"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "NeuralMem Team" }]
keywords = ["agent", "memory", "mcp", "llm", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "pydantic>=2.0",
    "sqlite-vec>=0.1",
    "fastembed>=0.3",
    "networkx>=3.0",
    "rank-bm25>=0.2",
    "mcp>=1.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
server    = ["fastapi>=0.110", "uvicorn>=0.30"]
openai    = ["openai>=1.0"]
ollama    = ["httpx>=0.27"]
reranker  = ["sentence-transformers>=3.0"]
cohere    = ["cohere>=5.0"]
gemini    = ["google-generativeai>=0.8"]
anthropic = ["anthropic>=0.30"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
]
all = ["neuralmem[server,openai,ollama,reranker,cohere,gemini,anthropic]"]

[project.scripts]
neuralmem = "neuralmem.cli.main:main"

[project.entry-points."mcp.servers"]
neuralmem = "neuralmem.mcp.server:mcp"

[project.urls]
Homepage = "https://github.com/neuralmem/neuralmem"
Documentation = "https://docs.neuralmem.dev"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neuralmem"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "stub: marks stub/placeholder implementations (deselect with '-m not stub')",
    "integration: marks integration tests requiring real storage",
    "slow: marks slow tests (skip with '-m not slow')",
]
addopts = "--tb=short -q"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
